[project]
name = "osm-login-python"
version = "1.0.0"
dynamic = ["version"]
description = "Use OSM Token exchange with OAuth2.0 for python projects."
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
dependencies = [
    "itsdangerous~=2.1.2",
    "pydantic>=2.0.1",
    "requests-oauthlib~=1.3.1",
]
keywords = ["osm", "openstreetmap", "oauth2", "login", "hot"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://hotosm.github.io/osm-login-python"
documentation = "https://hotosm.github.io/osm-login-python"
repository = "https://github.com/hotosm/osm-login-python"

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.2",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-exclude>=1.0.2",
]
[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_login_python"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "osm_login_python/__version__.py",
]

[tool.pdm]
version = {from = "osm_login_python/__version__.py"}
[tool.pdm.build]
includes = ["osm_login_python"]
source-includes = ["tests", "LICENSE", "README.md"]

[tool.black]
line-length = 132
target-versions = ["py39", "py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_login_python/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"
