[project]
name = "osm-login-python"
version = "2.1.0"
description = "Package to manage OAuth 2.0 login for OSM in Python."
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"},
    {name = "Sam Woodcock", email = "sam.woodcock@protonmail.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
dependencies = [
    "itsdangerous>=2.0.0",
    "requests-oauthlib>=1.3.0",
]
keywords = ["osm", "openstreetmap", "oauth2", "login", "hot"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://hotosm.github.io/osm-login-python"
documentation = "https://hotosm.github.io/osm-login-python"
repository = "https://github.com/hotosm/osm-login-python"

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.1",
    "coverage-badge>=1.1.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.2",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-exclude>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osm_login_python"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.0"
version_provider = "uv"
version_files = [
    "pyproject.toml:version",
    "osm_login_python/__version__.py",
]
tag_format = "$version"
version_scheme = "semver"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_login_python"

[tool.ruff]
fix = true
line-length = 132
target-version = "py39"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_login_python/__version__.py",
]
[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["osm_login_python"]

[tool.coverage.report]
show_missing = true